--- a/index.html
+++ b/index.html
@@ -13,32 +13,11 @@
   </style>
  </head>
  <body>
-  <div class="wrapper2" style="padding: 5px;"><div class="xs-force-center textable"><p style="text-align: center;"><span style="font-family: &quot;Open Sans&quot;;"><span style="font-size: 96px;"><strong>Произведение оплаты</strong></span></span></p></div>
   <div class="center">
-  <div class="wrapper2" style="padding: 5px;"><div class="xs-force-center textable"><p style="text-align: center;"><span style="font-size: 26px;"><strong>Оплата с Yandex</strong></span></span></p></div>
-<iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%9F%D0%BE%D0%BA%D1%83%D0%BF%D0%BA%D0%B0%20%D1%81%D0%BE%D1%84%D1%82%D0%B0&targets-hint=&default-sum=900&button-text=12&payment-type-choice=on&mobile-payment-type-choice=on&mail=on&hint=&successURL=un-deviced.ru&quickpay=shop&account=410015717989238" width="650" height="213" frameborder="0" allowtransparency="true" scrolling="no"></iframe> 
-  <div class="wrapper2" style="padding: 5px;"><div class="xs-force-center textable"><p style="text-align: center;"><span style="font-size: 26px;"><strong>Оплата с Qiwi</strong></span></span></p></div>
+  <div class="wrapper2" style="padding: 1px;"><div class="xs-force-center textable"><p style="text-align: center;"><span style="font-size: 26px;"><strong>Оплатить с кошелька, карты или со своего мобильного телефона</strong></span></span></p></div>
+<iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%9E%D0%BF%D0%BB%D0%B0%D1%82%D0%B0&targets-hint=&default-sum=&button-text=12&payment-type-choice=on&mail=on&hint=&successURL=&quickpay=shop&account=410015853602825" width="450" height="213" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
 
-<div style= 'margin:auto; width:150px; height:50px; '><a href='http://noreferer.ru/?http://yasobe.ru/na/jenfkm2r22' class='button8'>Оплата с Qiwi</a></div>
-
-<style>
-a.button8 {
-  display: inline-block;
-  color: white;
-  font-weight: 600;
-  text-decoration: none;
-  user-select: none;
-  padding: .5em 2em;
-  outline: none;
-  border: 2px solid;
-  border-radius: 1px;
-  transition: 0.2s;
-}
-a.button8:hover { background: rgba(255,255,255,.2); }
-a.button8:active { background: white; }
-}
-</style>
-
+<iframe src="http://noreferer.ru/?https://qiwi.me/action/widget/5g3f-f2fs-j2gf-acv3-nh35" width="520" height="260" frameBorder="0" ref="widget"/>
   </div>
  </body>
 </html>
